# tauri_demo

./: readme.md
reminder/: go.mod  go.sum  robot.db
reminder/app/api/: api.go
reminder/app/entry/: entry.go
reminder/app/repository/: Interface.go  robot_repo.go  user_repo.go
reminder/app/service/: Interface.go  root_service.go
reminder/cmd/: main.go
reminder/internal/e/: e.go
reminder/internal/engine/: engine.go
reminder/internal/giveback/: giveback.go
reminder/internal/tools/: tools.go
robot_desk/: package-lock.json  package.json  tailwind.config.js
robot_desk/src/: App.vue  main.js  styles.css
robot_desk/src-tauri/: Cargo.toml  tauri.conf.json
robot_desk/src-tauri/src/: main.rs
robot_desk/src/assets/iconsmind/: iconsmind.css
robot_desk/src/components/: Over.vue  Pop.vue
robot_desk/src/components/Base/: BaseBtn.vue  BaseCard.vue
robot_desk/src/layout/: Header.vue  Sider.vue  index.vue
robot_desk/src/router/: router.js
robot_desk/src/store/: store.js
robot_desk/src/style/: global.scss
robot_desk/src/views/: Home.vue  SignIn.vue  SignUp.vue
